--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
